--- a/NuGet.Docs/Release-Notes/3.5-RC.md
+++ b/NuGet.Docs/Release-Notes/3.5-RC.md
@@ -14,6 +14,8 @@
 
 * Performance: Improve ContentModel target framework parsing - [#3162](https://github.com/NuGet/Home/issues/3162)
 
+* Performance: Package Manager Console init.ps1 load time [#2956](https://github.com/NuGet/Home/issues/2956)
+
 * nuget pack for project.json ignores packOptions tags like summary, authors , owners etc - [#3161](https://github.com/NuGet/Home/issues/3161)
 
 * NuGet pack ignores dependencies in output nuspec for project.json - [#3145](https://github.com/NuGet/Home/issues/3145)
