--- a/NuGet.Docs/Release-Notes/3.5-RC.md
+++ b/NuGet.Docs/Release-Notes/3.5-RC.md
@@ -1,5 +1,7 @@
 #3.5 RC Release Notes
 
+3.5 release is focused on improving quality and performance of NuGet clients. In addition, we have shipped a few features like support for [Fallback folders](https://github.com/NuGet/Home/issues/2899), [PackageType](https://github.com/NuGet/Home/issues/2476) support in nuspec and more.
+
 [Full Changelog]()
 
 [Issues List](https://github.com/NuGet/Home/issues?q=is%3Aissue+is%3Aclosed+milestone%3A%223.5 RC")
@@ -11,10 +13,6 @@
 * nuget pack forcefully adds .tt files to content folder no matter what - [#3203](https://github.com/NuGet/Home/issues/3203)
 
 * nuget pack csproj (with project.json) crashes if there are no packOptions and owner in json file - [#3180](https://github.com/NuGet/Home/issues/3180)
-
-* Performance: Improve ContentModel target framework parsing - [#3162](https://github.com/NuGet/Home/issues/3162)
-
-* Performance: Package Manager Console init.ps1 load time [#2956](https://github.com/NuGet/Home/issues/2956)
 
 * nuget pack for project.json ignores packOptions tags like summary, authors , owners etc - [#3161](https://github.com/NuGet/Home/issues/3161)
 
@@ -66,13 +64,21 @@
 
 * "Upgrade vailable" filter shows upgrades that violate the version constraint - [#1094](https://github.com/NuGet/Home/issues/1094)
 
+**Performance Improvements:**
+
+* Performance: Improve ContentModel target framework parsing - [#3162](https://github.com/NuGet/Home/issues/3162)
+
+* Performance: Avoid reading runtime.json files for restores that do not have RIDs [#3150](https://github.com/NuGet/Home/issues/3150). On CI machines, restore of a sample ASP.NET Web Application reduced from over 15 secs to 3 secs.
+
+* Performance: Package Manager Console init.ps1 load time [#2956](https://github.com/NuGet/Home/issues/2956). Time to open PackageManagerConsole improved in some cases from 132s to 10s.
+
+* Solve ReSharper performance issues in NuGet Update - [#3044](https://github.com/NuGet/Home/issues/3044): On a sample project, time taken to install packages reduced from 140s to 68s.
+
 **DCRs:**
 
 * NuGet needs to let users know that upgrading/installing in a dotnet tfm based PCL could cause issues - [#3138](https://github.com/NuGet/Home/issues/3138)
 
 * Warn bad install/upgrade for project w/ tfm="dotnet" - [#3137](https://github.com/NuGet/Home/issues/3137)
-
-* Solve ReSharper performance issues in NuGet Update - [#3044](https://github.com/NuGet/Home/issues/3044)
 
 * Add netcoreapp11 and netstandard17 support - [#2998](https://github.com/NuGet/Home/issues/2998)
 
@@ -81,6 +87,8 @@
 * Leverage AssemblyMetadata attribute for nuspec token replacements - [#2851](https://github.com/NuGet/Home/issues/2851)
 
 * Remove the locked property from the lock file - [#2379](https://github.com/NuGet/Home/issues/2379)
+
+* Symbol packages should not ever be used in install or update #2807
 
 **Features:**
 
